# Copyright 2014 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.
import("//config.gni")

group("all_build") {
  deps = [
    "utils:all_utils",
  ]
}

group("all_test") {
  testonly = true
  deps = [
    "utils:all_utils_test",
    "$third_part:third_party_all",
  ]
}