cmake_minimum_required(VERSION 3.5.0)
project(MAIN VERSION 0.1.0)

# 添加opencv引用
set(OpenGL_DIR ${PROJECT_SOURCE_DIR})
set(OpenCV_DIR  F:/opencv/build/x64/vc16/lib)
set(CMAKE_BUILD_TYPE Debug)
set(UTILS_PATH ${PROJECT_SOURCE_DIR}/utils)
set(UTILS_TEST_PATH ${PROJECT_SOURCE_DIR}/test)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
# find_package(OpenCV REQUIRED)

add_subdirectory(utils/Matrix)
add_subdirectory(utils/Log)
add_subdirectory(utils/Reflex)
add_subdirectory(utils/JsonSerialize)
add_subdirectory(utils/Util)
add_subdirectory(utils/Singleton)
add_subdirectory(utils/Server)
add_subdirectory(utils/Image)
add_subdirectory(utils/Music)
add_subdirectory(utils/Thread)
add_subdirectory(utils/Video)
add_subdirectory(utils/DataCompress)

add_executable(MAIN main.cpp)
add_executable(ReflexTest ${UTILS_TEST_PATH}/reflex_test.cpp)
add_executable(JsonTest ${UTILS_TEST_PATH}/json_test.cpp)
add_executable(JsonParseTest ${UTILS_TEST_PATH}/json_test.cpp)
add_executable(ServerTest ${UTILS_TEST_PATH}/server_test.cpp)
add_executable(MatrixTest ${UTILS_TEST_PATH}/Matrix_test.cpp)
add_executable(ImageTest ${UTILS_TEST_PATH}/Image_test.cpp)
add_executable(UtilTest ${UTILS_TEST_PATH}/Util_test.cpp)
add_executable(MusicTest ${UTILS_TEST_PATH}/Music_test.cpp)
add_executable(OpencvTest ${UTILS_TEST_PATH}/Opencv_test.cpp)
add_executable(QrCodeTest ${UTILS_TEST_PATH}/QrCode_test.cpp)
add_executable(ThreadTest ${UTILS_TEST_PATH}/Thread_test.cpp)
add_executable(VideoTest ${UTILS_TEST_PATH}/Video_test.cpp)
add_executable(CompressTest ${UTILS_TEST_PATH}/Compress_test.cpp)
add_executable(OpenGLTest ${UTILS_TEST_PATH}/opengl_test.cpp ${PROJECT_SOURCE_DIR}/src/glad.c)

include_directories(${UTILS_PATH}/Matrix/header)
include_directories(${UTILS_PATH}/Log/header)
include_directories(${UTILS_PATH}/Util/header)
include_directories(${UTILS_PATH}/JsonSerialize/header)
include_directories(${UTILS_PATH}/Reflex/header)
include_directories(${UTILS_PATH}/Singleton/header)
include_directories(${UTILS_PATH}/Server/header)
include_directories(${UTILS_PATH}/Image/header)
include_directories(${UTILS_PATH}/Music/header)
include_directories(${UTILS_PATH}/Thread/header)
include_directories(${UTILS_PATH}/Video/header)
include_directories(${OpenCV_INCLUDE_DIRS})
include_directories(${UTILS_PATH}/DataCompress/header)
include_directories(${OpenGL_DIR}/include)

link_directories(${OpenGL_DIR}/lib)


#target_link_libraries(MAIN Matrix_static logger_static Util_static)
#target_link_libraries(MAIN Singleton_static)
#target_link_libraries(MAIN Reflex_static)
#target_link_libraries(MAIN JsonSerialize_static)
#target_link_libraries(MAIN Server_static)

target_link_libraries(JsonTest JsonSerialize_static)
target_link_libraries(ImageTest Image_static)
target_link_libraries(ServerTest Server_static)
target_link_libraries(UtilTest Util_static)
target_link_libraries(MusicTest Util_static)
target_link_libraries(ThreadTest Thread_static)
target_link_libraries(QrCodeTest QRCode_static logger_static)
target_link_libraries(OpencvTest ${OpenCV_LIBS})
target_link_libraries(VideoTest video_static)
target_link_libraries(CompressTest dataCompress_static)
target_link_libraries(OpenGLTest ${OpenGL_DIR}/lib/GLFW/libglfw3.a opengl32)

enable_testing()

add_test(Reflex_Test ReflexTest)
add_test(Json_Test JsonTest)
add_test(JsonParse_Test JsonTest)
add_test(Server_Test ServerTest)
add_test(Matrix_Test MatrixTest)
add_test(Image_Test ImageTest)
add_test(Util_Test UtilTest)
add_test(Opencv_Test OpencvTest)
add_test(Music_Test MusicTest)
add_test(QrCode_Test QrCodeTest)
add_test(Thread_test ThreadTest)
add_test(Video_test VideoTest)
add_test(Compress_test CompressTest)
add_test(OpenGL_Test OpenGLTest)
