cmake_minimum_required(VERSION 3.0.0)
project(Matrix CXX)
# set(LIB "F:/Visual Studio practice/vscode/newdemo/build")
set(CMAKE_INSTALL_PREFIX "F:/Visual-Studio-practice/vscode/mySource/build")
# set(LIBRARY_OUTPUT_DIRECTORY F:/Visual-Studio-practice/vscode/mySource/build/lib)
file(GLOB SOURCE_FILE ./src/Matrix.cpp)

# add_library(Matrix SHARED ${SOURCE_FILE})
# target_include_directories(Matrix PUBLIC header)
# install(TARGETS Matrix LIBRARY DESTINATION lib)
add_library(Matrix_static STATIC ${SOURCE_FILE})
target_include_directories(Matrix_static PUBLIC header)
install(TARGETS Matrix_static ARCHIVE DESTINATION lib)
install(FILES include/*.h DESTINATION lib)
